--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-21 18:06+0300\n"
+"POT-Creation-Date: 2024-04-24 00:49+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -42,39 +42,39 @@ msgstr ""
 msgid "Reset my password"
 msgstr ""
 
-#: .\templates\mainsite\architecture.html:126
+#: .\templates\mainsite\architecture.html:125
 msgid "Home"
 msgstr "Lar"
 
-#: .\templates\mainsite\architecture.html:131
+#: .\templates\mainsite\architecture.html:130
 msgid "Vocabulary"
 msgstr "Vocabulário"
 
-#: .\templates\mainsite\architecture.html:136
+#: .\templates\mainsite\architecture.html:135
 msgid "Analytics"
 msgstr "Análise"
 
-#: .\templates\mainsite\architecture.html:141
+#: .\templates\mainsite\architecture.html:140
 msgid "Diacritics"
 msgstr "Diacríticos"
 
-#: .\templates\mainsite\architecture.html:146
+#: .\templates\mainsite\architecture.html:145
 msgid "Culture"
 msgstr "Cultura"
 
-#: .\templates\mainsite\architecture.html:149
+#: .\templates\mainsite\architecture.html:148
 msgid "Architecture"
 msgstr "Arquitetura"
 
-#: .\templates\mainsite\architecture.html:150
+#: .\templates\mainsite\architecture.html:149
 msgid "Festivals"
 msgstr "Festivais"
 
-#: .\templates\mainsite\architecture.html:151
+#: .\templates\mainsite\architecture.html:150
 msgid "Media"
 msgstr "Meios de comunicação"
 
-#: .\templates\mainsite\architecture.html:174
+#: .\templates\mainsite\architecture.html:172
 msgid ""
 "Portugal is a nation that takes great pride in its festivals, which vividly "
 "reflect its rich heritage and past culture."
@@ -82,7 +82,7 @@ msgstr ""
 "Portugal é uma nação que se orgulha muito dos seus festivais, que reflectem "
 "vividamente o seu rico património e cultura passada."
 
-#: .\templates\mainsite\architecture.html:175
+#: .\templates\mainsite\architecture.html:173
 msgid ""
 "\n"
 "          These nationwide festivals encompass a wide range of activities, "
@@ -112,18 +112,18 @@ msgstr ""
 "da essência de Portugal, exibindo uma manifestação vibrante e vibrante da "
 "história do país e da hospitalidade amigável da sua população."
 
-#: .\templates\mainsite\architecture.html:184
+#: .\templates\mainsite\architecture.html:182
 msgid ""
 "Rotate the cube on the right to view images of some common Portuguese "
 "festivals."
 msgstr ""
 "Rode o cubo à direita para ver imagens de algumas festas portuguesas comuns."
 
-#: .\templates\mainsite\architecture.html:185
+#: .\templates\mainsite\architecture.html:183
 msgid "Click on their names to learn more."
 msgstr "Clique nos nomes deles para saber mais."
 
-#: .\templates\mainsite\architecture.html:236
+#: .\templates\mainsite\architecture.html:216
 msgid ""
 "'Rock in Rio is one of the world's largest and most famous music festivals "
 "originally founded in \n"
@@ -142,3 +142,226 @@ msgstr ""
 "a cada 2 anos, desde 2004. O festival é conhecido por ser realizado em "
 "grande escala, atraindo os principais artistas internacionais de vários "
 "gêneros musicais, desde rock e pop até eletrônico e indie."
+
+#: .\templates\mainsite\architecture.html:221
+#: .\templates\mainsite\architecture.html:267
+#: .\templates\mainsite\architecture.html:300
+#: .\templates\mainsite\architecture.html:335
+#: .\templates\mainsite\architecture.html:366
+#: .\templates\mainsite\architecture.html:396
+msgid "Location:"
+msgstr "Localização:"
+
+#: .\templates\mainsite\architecture.html:222
+msgid ""
+"\n"
+"                                It is held in Lisbon, usually at the Parque "
+"de Bela Vista, which is a large \n"
+"                                park that can accomodate the expansive "
+"stages, audience areas and entertainment zones that are required to host the "
+"festival.\n"
+"                                "
+msgstr ""
+"Realiza-se em Lisboa, normalmente no Parque da Bela Vista, que é um grande parque que pode acomodar os amplos palcos, áreas de audiência e zonas de entretenimento necessárias para acolher o festival."
+
+#: .\templates\mainsite\architecture.html:228
+#: .\templates\mainsite\architecture.html:270
+#: .\templates\mainsite\architecture.html:306
+#: .\templates\mainsite\architecture.html:341
+#: .\templates\mainsite\architecture.html:367
+#: .\templates\mainsite\architecture.html:397
+msgid "Dates:"
+msgstr "Datas:"
+
+#: .\templates\mainsite\architecture.html:229
+msgid "Not fixed, but usually in the month of September."
+msgstr "Não fixas, mas geralmente no mês de setembro."
+
+#: .\templates\mainsite\architecture.html:254
+msgid ""
+"\n"
+"                                Also known as 'Dia de Santo António', the "
+"Feast Day of St. Anthony is one of Portugal's most cherished\n"
+"                                festivals where St.Anthony is considered the "
+"Patron Saint of lovers and the protector of lost items. The festival "
+"combines religious observance\n"
+"                                with popular festivities that reflect the "
+"deep cultural heritage and community spirit among the people.\n"
+"                                "
+msgstr ""
+"Também conhecida como 'Dia de Santo António', a Festa de Santo António é uma das festas mais queridas de Portugal onde Santo António é considerado o padroeiro dos amantes e o protetor dos objetos perdidos. O festival combina a observância religiosa com festividades populares que refletem a profunda herança cultural e o espírito comunitário entre as pessoas."
+
+#: .\templates\mainsite\architecture.html:261
+msgid ""
+"\n"
+"                                One of the unique aspects of the Feast Day "
+"of Saint Anthony is the mass wedding ceremony, also known as 'Casamentos de "
+"Santa António' (Saint Anthony's Weddings).\n"
+"                                Every year, several selected couples are "
+"married simultaneously in a high-profile event that symbolizes love and "
+"community. Saint Anthony is revered as the\n"
+"                                match-maker saint, which makes these "
+"weddings particularly meaningful.\n"
+"                                "
+msgstr ""
+"Uma das particularidades da Festa de Santo António é a cerimónia de casamento em massa, também conhecida como 'Casamentos de Santo António'. Todos os anos, vários casais selecionados casam-se simultaneamente num evento de alto nível que simboliza o amor e a comunidade. Santo António é venerado como o santo casamenteiro, o que torna estes casamentos particularmente significativos."
+
+#: .\templates\mainsite\architecture.html:268
+msgid ""
+"Celebrated all over Portugal, but most ferevently in Lisbon, as that is "
+"Saint Anthony"
+msgstr ""
+
+#: .\templates\mainsite\architecture.html:270
+msgid "June 13"
+msgstr "13 de Junho"
+
+#: .\templates\mainsite\architecture.html:287
+msgid ""
+"\n"
+"                                The São João festival is one of Portugal's "
+"most lively and colorful celebrations. It honors Saint John the Baptist and "
+"marks the\n"
+"                                beginning of the Summer season. It is "
+"characterized by a mix of religious and traditional festivities, which make "
+"it a significant cultural event with deep\n"
+"                                roots in Portuguese tradition.\n"
+"                                "
+msgstr ""
+"A festa de São João é uma das celebrações mais animadas e coloridas de Portugal. Homenageia São João Batista e marca o início do verão. Caracteriza-se por uma mistura de festividades religiosas e tradicionais, que o tornam um evento cultural significativo e com profundas raízes na tradição portuguesa."
+
+#: .\templates\mainsite\architecture.html:294
+msgid ""
+"\n"
+"                                Keeping with ancient tradition, bonfires are "
+"a central part of São João, around which people gather to celebrate, sing "
+"and jump over the flames as a symbol of\n"
+"                                protection and purification. One of the more "
+"amusing and unique traditions is the use of soft plastic hammers. Festival-"
+"goers playfully hit each other on the head\n"
+"                                with these hammers to create a friendly and "
+"joyful reaction amongst themselves.\n"
+"                                "
+msgstr ""
+"Mantendo a tradição milenar, as fogueiras são um elemento central do São João, em torno das quais as pessoas se reúnem para celebrar, cantar e saltar sobre as chamas como símbolo de proteção e purificação. Uma das tradições mais divertidas e únicas é o uso de martelos de plástico macio. Os festivaleiros batem uns nos outros na cabeça com estes martelos para criar uma reação amigável e alegre entre si."
+
+#: .\templates\mainsite\architecture.html:301
+msgid ""
+"\n"
+"                                Mainly celebrated in Porto, and also other "
+"parts of Northern Portugal like Braga and Vila do Conde, although\n"
+"                                on a smaller scale.\n"
+"                                "
+msgstr ""
+"Celebrado principalmente no Porto, mas também noutras zonas do Norte de Portugal como Braga e Vila do Conde, embora em menor escala."
+
+#: .\templates\mainsite\architecture.html:323
+msgid ""
+"\n"
+"                                The Carinval in Portugal, known locally as "
+"'Carnaval', is a pre-Lenten festival celebrated with great enthusiasm and a "
+"variety of rich traditions.\n"
+"                                It takes place right before Ash Wednesday "
+"and features a blend of religious, pagan and modern elements.\n"
+"                                "
+msgstr ""
+"O Carinval em Portugal, conhecido localmente como 'Carnaval', é um festival pré-quaresmal celebrado com grande entusiasmo e uma variedade de ricas tradições. Acontece pouco antes da Quarta-feira de Cinzas e apresenta uma mistura de elementos religiosos, pagãos e modernos."
+
+#: .\templates\mainsite\architecture.html:329
+msgid ""
+"\n"
+"                                The Carnaval is widely known for its "
+"elaborate\n"
+"                                parades featuring colorful floats, vibrant "
+"costumes and the lively samba bands. The participants in these parades often "
+"dress in an extravagant manner,\n"
+"                                reflecting both traditional themes and "
+"social or political commentary.\n"
+"                                "
+msgstr ""
+"O Carnaval é amplamente conhecido por seus desfiles elaborados com carros alegóricos coloridos, fantasias vibrantes e animadas bandas de samba. Os participantes desses desfiles costumam se vestir de maneira extravagante, refletindo tanto temas tradicionais quanto comentários sociais ou políticos."
+
+#: .\templates\mainsite\architecture.html:336
+msgid ""
+"\n"
+"                                The festivities take place all over "
+"Portugal, but the most famous celebrations can be found in \n"
+"                                the regions of Torres Vedras, Ovar, Loulé "
+"and Madeira.\n"
+"                                "
+msgstr ""
+"As festas acontecem um pouco por todo o país, mas as celebrações mais famosas encontram-se nas regiões de Torres Vedras, Ovar, Loulé e Madeira."
+
+#: .\templates\mainsite\architecture.html:341
+msgid ""
+"The days leading up to Ash Wednesday (decided by the Christian Calendar)"
+msgstr ""
+"Os dias que antecedem a Quarta-feira de Cinzas (decidido pelo Calendário Cristão)"
+
+#: .\templates\mainsite\architecture.html:358
+msgid ""
+"\n"
+"                              Semana Santa (Holy Week) is a deeply "
+"significant and solemn festival that commemorates the passion of Christ. It "
+"has been celebrated\n"
+"                              for centuries, and is deep rooted in the Roman "
+"Catholic tradition. In Portugal and many other Catholic countries across the "
+"globe, these \n"
+"                              celebrations are a spiritual experience that "
+"involves processions, rituals and ceremonies.\n"
+"                              "
+msgstr ""
+"A Semana Santa (Semana Santa) é uma festa profundamente significativa e solene que comemora a paixão de Cristo. É celebrado há séculos e está profundamente enraizado na tradição católica romana. Em Portugal e em muitos outros países católicos do mundo, estas celebrações são uma experiência espiritual que envolve procissões, rituais e cerimónias."
+
+#: .\templates\mainsite\architecture.html:364
+msgid ""
+"The celebration of Holy Week includes 4 parts, namely, Palm Sunday, Holy "
+"Thursday, Good Friday and Easter Sunday."
+msgstr ""
+"A celebração da Semana Santa inclui 4 partes, nomeadamente, Domingo de Ramos, Quinta-feira Santa, Sexta-feira Santa e Domingo de Páscoa."
+
+#: .\templates\mainsite\architecture.html:366
+msgid "All across Portugal."
+msgstr "Em todo Portugal."
+
+#: .\templates\mainsite\architecture.html:367
+msgid ""
+"It spans the last week of Lent. Starting on Palm Sunday and ending on Easter "
+"Sunday."
+msgstr ""
+"Abrange a última semana da Quaresma. Começando no Domingo de Ramos e terminando no Domingo de Páscoa."
+
+#: .\templates\mainsite\architecture.html:384
+msgid ""
+"\n"
+"                            Festas Das Cruzes (Festival of Crosses) is a "
+"traditional Portuguese festival that has deep religious roots and "
+"commemorates the\n"
+"                            discovery of a crucifix by the local people, "
+"which is believed to have miraculous origins. It is not only a religious "
+"event but also\n"
+"                            a time of joyful celebration, reflecting the "
+"community's culture and Heritage\n"
+"                            "
+msgstr ""
+"As Festas Das Cruzes são uma festa tradicional portuguesa que tem profundas raízes religiosas e comemora a descoberta de um crucifixo pela população local, que se acredita ter origens milagrosas. Não é apenas um evento religioso, mas também um momento de celebração alegre, refletindo a cultura e o património da comunidade."
+
+#: .\templates\mainsite\architecture.html:391
+msgid ""
+"\n"
+"                            This festival is a vivid example of how Portugal "
+"preserves and celebrates its rich history and religious heritage through "
+"annual\n"
+"                            community events by blending devotion with "
+"cultural festivity.\n"
+"                            "
+msgstr ""
+"Este festival é um exemplo vívido de como Portugal preserva e celebra a sua rica história e património religioso através de eventos comunitários anuais, combinando a devoção com a festividade cultural."
+
+#: .\templates\mainsite\architecture.html:396
+msgid "Primarily celebrated in Barcelos, located in Northern Portugal."
+msgstr "Comemorado principalmente em Barcelos, localizado no Norte de Portugal."
+
+#: .\templates\mainsite\architecture.html:397
+msgid "The beginning of Spring."
+msgstr "Início da primavera."
