--- a/locale/pt/LC_MESSAGES/django.po
+++ b/locale/pt/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-04-24 00:49+0300\n"
+"POT-Creation-Date: 2024-04-24 15:36+0300\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -63,6 +63,7 @@ msgid "Culture"
 msgstr "Cultura"
 
 #: .\templates\mainsite\architecture.html:148
+#: .\templates\mainsite\festivals.html:110
 msgid "Architecture"
 msgstr "Arquitetura"
 
@@ -162,7 +163,9 @@ msgid ""
 "festival.\n"
 "                                "
 msgstr ""
-"Realiza-se em Lisboa, normalmente no Parque da Bela Vista, que é um grande parque que pode acomodar os amplos palcos, áreas de audiência e zonas de entretenimento necessárias para acolher o festival."
+"Realiza-se em Lisboa, normalmente no Parque da Bela Vista, que é um grande "
+"parque que pode acomodar os amplos palcos, áreas de audiência e zonas de "
+"entretenimento necessárias para acolher o festival."
 
 #: .\templates\mainsite\architecture.html:228
 #: .\templates\mainsite\architecture.html:270
@@ -189,7 +192,11 @@ msgid ""
 "deep cultural heritage and community spirit among the people.\n"
 "                                "
 msgstr ""
-"Também conhecida como 'Dia de Santo António', a Festa de Santo António é uma das festas mais queridas de Portugal onde Santo António é considerado o padroeiro dos amantes e o protetor dos objetos perdidos. O festival combina a observância religiosa com festividades populares que refletem a profunda herança cultural e o espírito comunitário entre as pessoas."
+"Também conhecida como 'Dia de Santo António', a Festa de Santo António é uma "
+"das festas mais queridas de Portugal onde Santo António é considerado o "
+"padroeiro dos amantes e o protetor dos objetos perdidos. O festival combina "
+"a observância religiosa com festividades populares que refletem a profunda "
+"herança cultural e o espírito comunitário entre as pessoas."
 
 #: .\templates\mainsite\architecture.html:261
 msgid ""
@@ -204,12 +211,17 @@ msgid ""
 "weddings particularly meaningful.\n"
 "                                "
 msgstr ""
-"Uma das particularidades da Festa de Santo António é a cerimónia de casamento em massa, também conhecida como 'Casamentos de Santo António'. Todos os anos, vários casais selecionados casam-se simultaneamente num evento de alto nível que simboliza o amor e a comunidade. Santo António é venerado como o santo casamenteiro, o que torna estes casamentos particularmente significativos."
+"Uma das particularidades da Festa de Santo António é a cerimónia de "
+"casamento em massa, também conhecida como 'Casamentos de Santo António'. "
+"Todos os anos, vários casais selecionados casam-se simultaneamente num "
+"evento de alto nível que simboliza o amor e a comunidade. Santo António é "
+"venerado como o santo casamenteiro, o que torna estes casamentos "
+"particularmente significativos."
 
 #: .\templates\mainsite\architecture.html:268
 msgid ""
 "Celebrated all over Portugal, but most ferevently in Lisbon, as that is "
-"Saint Anthony"
+"Saint Anthony's place of birth."
 msgstr ""
 
 #: .\templates\mainsite\architecture.html:270
@@ -228,7 +240,11 @@ msgid ""
 "                                roots in Portuguese tradition.\n"
 "                                "
 msgstr ""
-"A festa de São João é uma das celebrações mais animadas e coloridas de Portugal. Homenageia São João Batista e marca o início do verão. Caracteriza-se por uma mistura de festividades religiosas e tradicionais, que o tornam um evento cultural significativo e com profundas raízes na tradição portuguesa."
+"A festa de São João é uma das celebrações mais animadas e coloridas de "
+"Portugal. Homenageia São João Batista e marca o início do verão. Caracteriza-"
+"se por uma mistura de festividades religiosas e tradicionais, que o tornam "
+"um evento cultural significativo e com profundas raízes na tradição "
+"portuguesa."
 
 #: .\templates\mainsite\architecture.html:294
 msgid ""
@@ -243,7 +259,12 @@ msgid ""
 "joyful reaction amongst themselves.\n"
 "                                "
 msgstr ""
-"Mantendo a tradição milenar, as fogueiras são um elemento central do São João, em torno das quais as pessoas se reúnem para celebrar, cantar e saltar sobre as chamas como símbolo de proteção e purificação. Uma das tradições mais divertidas e únicas é o uso de martelos de plástico macio. Os festivaleiros batem uns nos outros na cabeça com estes martelos para criar uma reação amigável e alegre entre si."
+"Mantendo a tradição milenar, as fogueiras são um elemento central do São "
+"João, em torno das quais as pessoas se reúnem para celebrar, cantar e saltar "
+"sobre as chamas como símbolo de proteção e purificação. Uma das tradições "
+"mais divertidas e únicas é o uso de martelos de plástico macio. Os "
+"festivaleiros batem uns nos outros na cabeça com estes martelos para criar "
+"uma reação amigável e alegre entre si."
 
 #: .\templates\mainsite\architecture.html:301
 msgid ""
@@ -253,7 +274,8 @@ msgid ""
 "                                on a smaller scale.\n"
 "                                "
 msgstr ""
-"Celebrado principalmente no Porto, mas também noutras zonas do Norte de Portugal como Braga e Vila do Conde, embora em menor escala."
+"Celebrado principalmente no Porto, mas também noutras zonas do Norte de "
+"Portugal como Braga e Vila do Conde, embora em menor escala."
 
 #: .\templates\mainsite\architecture.html:323
 msgid ""
@@ -265,7 +287,10 @@ msgid ""
 "and features a blend of religious, pagan and modern elements.\n"
 "                                "
 msgstr ""
-"O Carinval em Portugal, conhecido localmente como 'Carnaval', é um festival pré-quaresmal celebrado com grande entusiasmo e uma variedade de ricas tradições. Acontece pouco antes da Quarta-feira de Cinzas e apresenta uma mistura de elementos religiosos, pagãos e modernos."
+"O Carinval em Portugal, conhecido localmente como 'Carnaval', é um festival "
+"pré-quaresmal celebrado com grande entusiasmo e uma variedade de ricas "
+"tradições. Acontece pouco antes da Quarta-feira de Cinzas e apresenta uma "
+"mistura de elementos religiosos, pagãos e modernos."
 
 #: .\templates\mainsite\architecture.html:329
 msgid ""
@@ -279,7 +304,10 @@ msgid ""
 "social or political commentary.\n"
 "                                "
 msgstr ""
-"O Carnaval é amplamente conhecido por seus desfiles elaborados com carros alegóricos coloridos, fantasias vibrantes e animadas bandas de samba. Os participantes desses desfiles costumam se vestir de maneira extravagante, refletindo tanto temas tradicionais quanto comentários sociais ou políticos."
+"O Carnaval é amplamente conhecido por seus desfiles elaborados com carros "
+"alegóricos coloridos, fantasias vibrantes e animadas bandas de samba. Os "
+"participantes desses desfiles costumam se vestir de maneira extravagante, "
+"refletindo tanto temas tradicionais quanto comentários sociais ou políticos."
 
 #: .\templates\mainsite\architecture.html:336
 msgid ""
@@ -290,13 +318,15 @@ msgid ""
 "and Madeira.\n"
 "                                "
 msgstr ""
-"As festas acontecem um pouco por todo o país, mas as celebrações mais famosas encontram-se nas regiões de Torres Vedras, Ovar, Loulé e Madeira."
+"As festas acontecem um pouco por todo o país, mas as celebrações mais "
+"famosas encontram-se nas regiões de Torres Vedras, Ovar, Loulé e Madeira."
 
 #: .\templates\mainsite\architecture.html:341
 msgid ""
 "The days leading up to Ash Wednesday (decided by the Christian Calendar)"
 msgstr ""
-"Os dias que antecedem a Quarta-feira de Cinzas (decidido pelo Calendário Cristão)"
+"Os dias que antecedem a Quarta-feira de Cinzas (decidido pelo Calendário "
+"Cristão)"
 
 #: .\templates\mainsite\architecture.html:358
 msgid ""
@@ -311,14 +341,19 @@ msgid ""
 "involves processions, rituals and ceremonies.\n"
 "                              "
 msgstr ""
-"A Semana Santa (Semana Santa) é uma festa profundamente significativa e solene que comemora a paixão de Cristo. É celebrado há séculos e está profundamente enraizado na tradição católica romana. Em Portugal e em muitos outros países católicos do mundo, estas celebrações são uma experiência espiritual que envolve procissões, rituais e cerimónias."
+"A Semana Santa (Semana Santa) é uma festa profundamente significativa e "
+"solene que comemora a paixão de Cristo. É celebrado há séculos e está "
+"profundamente enraizado na tradição católica romana. Em Portugal e em muitos "
+"outros países católicos do mundo, estas celebrações são uma experiência "
+"espiritual que envolve procissões, rituais e cerimónias."
 
 #: .\templates\mainsite\architecture.html:364
 msgid ""
 "The celebration of Holy Week includes 4 parts, namely, Palm Sunday, Holy "
 "Thursday, Good Friday and Easter Sunday."
 msgstr ""
-"A celebração da Semana Santa inclui 4 partes, nomeadamente, Domingo de Ramos, Quinta-feira Santa, Sexta-feira Santa e Domingo de Páscoa."
+"A celebração da Semana Santa inclui 4 partes, nomeadamente, Domingo de "
+"Ramos, Quinta-feira Santa, Sexta-feira Santa e Domingo de Páscoa."
 
 #: .\templates\mainsite\architecture.html:366
 msgid "All across Portugal."
@@ -329,7 +364,8 @@ msgid ""
 "It spans the last week of Lent. Starting on Palm Sunday and ending on Easter "
 "Sunday."
 msgstr ""
-"Abrange a última semana da Quaresma. Começando no Domingo de Ramos e terminando no Domingo de Páscoa."
+"Abrange a última semana da Quaresma. Começando no Domingo de Ramos e "
+"terminando no Domingo de Páscoa."
 
 #: .\templates\mainsite\architecture.html:384
 msgid ""
@@ -344,7 +380,11 @@ msgid ""
 "community's culture and Heritage\n"
 "                            "
 msgstr ""
-"As Festas Das Cruzes são uma festa tradicional portuguesa que tem profundas raízes religiosas e comemora a descoberta de um crucifixo pela população local, que se acredita ter origens milagrosas. Não é apenas um evento religioso, mas também um momento de celebração alegre, refletindo a cultura e o património da comunidade."
+"As Festas Das Cruzes são uma festa tradicional portuguesa que tem profundas "
+"raízes religiosas e comemora a descoberta de um crucifixo pela população "
+"local, que se acredita ter origens milagrosas. Não é apenas um evento "
+"religioso, mas também um momento de celebração alegre, refletindo a cultura "
+"e o património da comunidade."
 
 #: .\templates\mainsite\architecture.html:391
 msgid ""
@@ -356,12 +396,181 @@ msgid ""
 "cultural festivity.\n"
 "                            "
 msgstr ""
-"Este festival é um exemplo vívido de como Portugal preserva e celebra a sua rica história e património religioso através de eventos comunitários anuais, combinando a devoção com a festividade cultural."
+"Este festival é um exemplo vívido de como Portugal preserva e celebra a sua "
+"rica história e património religioso através de eventos comunitários anuais, "
+"combinando a devoção com a festividade cultural."
 
 #: .\templates\mainsite\architecture.html:396
 msgid "Primarily celebrated in Barcelos, located in Northern Portugal."
-msgstr "Comemorado principalmente em Barcelos, localizado no Norte de Portugal."
+msgstr ""
+"Comemorado principalmente em Barcelos, localizado no Norte de Portugal."
 
 #: .\templates\mainsite\architecture.html:397
 msgid "The beginning of Spring."
 msgstr "Início da primavera."
+
+#: .\templates\mainsite\festivals.html:113
+msgid ""
+"\n"
+"                Portugal is renowned for its rich architecural heritage, "
+"spanning across several centuries and a variety of styles, from Romanesque "
+"to \n"
+"                Manueline, and from Baroque to Modern. Information on the "
+"six most famous architectural sites in Portugal are displayed below.\n"
+"                "
+msgstr ""
+"\n"
+"Portugal é conhecido pelo seu rico património arquitetónico, abrangendo "
+"vários séculos e uma variedade de estilos, do românico ao manuelino, e do "
+"barroco ao moderno. Abaixo são apresentadas informações sobre os seis sítios "
+"arquitetónicos mais famosos de Portugal."
+
+#: .\templates\mainsite\festivals.html:119
+msgid ""
+"Interact with the maps and switch to Street View to get a better view of the "
+"sites."
+msgstr ""
+"Interaja com os mapas e mude para o Street View para ter uma visão melhor "
+"dos locais."
+
+#: .\templates\mainsite\festivals.html:137
+msgid ""
+"\n"
+"                                        Located in the heart of Lisbon, this "
+"tower is a masterpiece of the Manueline style,\n"
+"                                        combining elements of Gothic and "
+"Renaissance architecture. It was built in the early 16th century as a part "
+"of the\n"
+"                                        defenses at the mouth of the Lisbon "
+"Harbor. Now, it is a UNESCO World Heritage Site and one of the most "
+"photographed\n"
+"                                        landmarks of Portugal.\n"
+"                                        "
+msgstr ""
+"\n"
+"Situada no coração de Lisboa, esta torre é uma obra-prima do estilo "
+"manuelino, combinando elementos da arquitetura gótica e renascentista. Foi "
+"construído no início do século XVI como parte das defesas da foz do Porto de "
+"Lisboa. Hoje é Património Mundial da UNESCO e um dos marcos mais "
+"fotografados de Portugal."
+
+#: .\templates\mainsite\festivals.html:171
+msgid ""
+"\n"
+"                                        Also located in Belem, Lisbon, the "
+"Jeronimos Monastery is one of the best examples of the late\n"
+"                                        Gothic Architecture. It was built in "
+"the early 16th century by King Manuel I to commemorate the return of \n"
+"                                        Vasco De Gama from his journey to "
+"India, and give thanks to God for the wealth it brought to Portugal. This\n"
+"                                        site is also a part of the same "
+"UNESCO World Heritage designation as the Tower Of Belem.\n"
+"                                        "
+msgstr ""
+"\n"
+"Também localizado em Belém, Lisboa, o Mosteiro dos Jerónimos é um dos "
+"melhores exemplos da arquitectura gótica tardia. Foi construído no início do "
+"século XVI por D. Manuel I para comemorar o regresso de Vasco De Gama da sua "
+"viagem à Índia e dar graças a Deus pelas riquezas que trouxe a Portugal. "
+"Este local também faz parte da mesma designação de Patrimônio Mundial da "
+"UNESCO que a Torre de Belém."
+
+#: .\templates\mainsite\festivals.html:204
+msgid ""
+"\n"
+"                                        Situated upon a hilltop in the "
+"Sintra mountains surrounded by lush forests and gardens, \n"
+"                                        this palace is one of the finest "
+"examples of\n"
+"                                        19th century romanticism in the "
+"world. Today, the palace is a UNESCO World Heritage Site and considered to "
+"be one\n"
+"                                        of the Seven Wonders of Portugal.\n"
+"                                        "
+msgstr ""
+"\n"
+"Situado no topo de uma colina na serra de Sintra, rodeado por exuberantes "
+"florestas e jardins, este palácio é um dos melhores exemplos do romantismo "
+"do século XIX no mundo. Hoje, o palácio é Património Mundial da UNESCO e "
+"considerado uma das Sete Maravilhas de Portugal."
+
+#: .\templates\mainsite\festivals.html:239
+msgid ""
+"\n"
+"                                        Located in Batalha, this monastery "
+"is one of the most important Gothic sites in Portugal, renowned for its "
+"intricate Manueline flourishes. It was\n"
+"                                        built to commemorate the Battle of "
+"Aljubarotta (1385) and took over a century to complete. It features a "
+"breathtaking array of \n"
+"                                        sculptures, filigree and the famed "
+"Unfinished Chapels.\n"
+"                                        "
+msgstr ""
+"\n"
+"Localizado na Batalha, este mosteiro é um dos locais góticos mais "
+"importantes de Portugal, conhecido pelos seus intrincados floreios "
+"manuelinos. Foi construído para comemorar a Batalha de Aljubarotta (1385) e "
+"demorou mais de um século a ser concluído. Possui uma impressionante "
+"variedade de esculturas, filigranas e as famosas Capelas Inacabadas. "
+
+#: .\templates\mainsite\festivals.html:272
+msgid ""
+"\n"
+"                                        Located in Porto, Casa de Musica is "
+"one of the most strikingly modern and innovative architectural landmarks\n"
+"                                        in Portugal. It was designed by "
+"Dutch Artist Rem Koolhas in 2001, and the construction was completed in "
+"2005. It stands out\n"
+"                                        not only for its distinct "
+"contemporary design, but also for its cultural significance as a principal "
+"venue for music and performing\n"
+"                                        arts.\n"
+"                                        "
+msgstr ""
+"\n"
+"Situada no Porto, a Casa de Música é um dos marcos arquitetónicos mais "
+"modernos e inovadores de Portugal. Foi desenhado pelo artista holandês Rem "
+"Koolhas em 2001 e a construção foi concluída em 2005. Destaca-se não só pelo "
+"seu design contemporâneo distinto, mas também pelo seu significado cultural "
+"como principal espaço de música e artes performativas."
+
+#: .\templates\mainsite\festivals.html:307
+msgid ""
+"\n"
+"                                        The Alcobaça Monastery is one of the "
+"oldest and most impressive exapmples of Cistercian architecure\n"
+"                                        in Portugal. Founded in the 12th "
+"century, the monastery is celebrated for the purity and clarity of its "
+"architectural style, and is \n"
+"                                        particularly noted for the ornate "
+"tombs of King Pedro I and Inês de Castro.\n"
+"                                        "
+msgstr ""
+"\n"
+"O Mosteiro de Alcobaça é um dos exemplos mais antigos e impressionantes da "
+"arquitectura cisterciense em Portugal. Fundado no século XII, o mosteiro é "
+"celebrado pela pureza e clareza do seu estilo arquitectónico, destacando-se "
+"particularmente pelos túmulos ornamentados de D. Pedro I e D. Inês de Castro."
+
+#, fuzzy
+#~| msgid "Location:"
+#~ msgid "Syndication"
+#~ msgstr "Localização:"
+
+#, fuzzy
+#~| msgid "June 13"
+#~ msgid "June"
+#~ msgstr "13 de Junho"
+
+#, fuzzy
+#~| msgid "June 13"
+#~ msgctxt "abbrev. month"
+#~ msgid "June"
+#~ msgstr "13 de Junho"
+
+#, fuzzy
+#~| msgid "June 13"
+#~ msgctxt "alt. month"
+#~ msgid "June"
+#~ msgstr "13 de Junho"
